fix: z-index for backdrop

--- a/src/ui/components/backdrop/backdrop.module.scss
+++ b/src/ui/components/backdrop/backdrop.module.scss
@@ -11,6 +11,7 @@
   visibility: hidden;
   pointer-events: none;
   transition: opacity 0.3s ease-in-out;
+  z-index: 100;
 
   [data-backdrop='true'] & {
     opacity: 1;
